commit bootstrap 4 composer

--- a/frontend/views/login/formularioLogin.html
+++ b/frontend/views/login/formularioLogin.html
@@ -8,7 +8,8 @@
       <br />
       <div class="container">
         <div class="row">
-          <label>Contrase&ntilde;a (*)</label><input name="password" ng-model="loginForm.password" type="password" required/>
+          <label>Contrase&ntilde;a (*)</label>
+              <input class="col-xs-6 col-md-4" name="password" ng-model="loginForm.password" type="password" required/>
         </div>
       </div>
       <br />
