testeando el git cola

--- a/frontend/views/menuPrincipal/formularioMenu1.html
+++ b/frontend/views/menuPrincipal/formularioMenu1.html
@@ -12,18 +12,19 @@
         }
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular.min.js"></script>
-  <script src="../../js/app.js"></script>  
-  <script src="../../js/appImages.js"></script> 
+  <script src="../../js/app.js"></script>
+  <script src="../../js/appImages.js"></script>
   <script type="text/javascript" src="../../js/ajax.js"></script>
-  <script type="text/javascript" src="../../js/ajax-dynamic-content.js"></script>  
+  <script type="text/javascript" src="../../js/ajax-dynamic-content.js"></script>
   <script type="text/javascript" src="../../js/jquery-3.3.1.js"></script>
   <script type="text/javascript" src="../../js/jquery-3.3.1.min.js"></script>
-  
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="../../css/style.css">
   <link rel="stylesheet" href="../../css/select.css">
+  <!-- texto de prueba -->
 
 </head>
 
@@ -39,16 +40,16 @@
   <div class="toggle">
     <div class="tooltip1" style="color:black;width:8em;font-weight:bold;font-family:Verdana;font-size:1em;left:-6em;position:absolute;"><a ng-click="closeSession()">Cerrar sesi&oacute;n</a></div>
   </div>
-  <div class="form" >    
-    <center><h2 style="font-family:Verdana;">MEN&Uacute; PRINCIPAL</h2></center>    
+  <div class="form" >
+    <center><h2 style="font-family:Verdana;">MEN&Uacute; PRINCIPAL</h2></center>
     <br />
-    <form>      
+    <form>
       <!--label>Login</label><input name="login" type="text" placeholder="Login"/>
       <label>Contrase&ntilde;a</label><input name="password" type="password" placeholder="Contrase&ntilde;a"/-->
       <center>
         <button class="cotizaciones" style="width:15em;" ng-click="showSolicitudesIndex()">Solicitudes</button><br /><br />
         <button class="productos" style="width:15em;" ng-click="showClientsIndex()">Clientes</button><br /><br />
-        <button class="cotizaciones" style="width:15em;" ng-click="showInmueblesIndex()">Inmuebles</button><br /><br />       
+        <button class="cotizaciones" style="width:15em;" ng-click="showInmueblesIndex()">Inmuebles</button><br /><br />
         <button class="productos" style="width:15em;" ng-click="showAdministracionIndex()">Administraci&oacute;n</button>
       </center>
     </form>
