--- a/frontend/views/menuPrincipal/formularioMenu.html
+++ b/frontend/views/menuPrincipal/formularioMenu.html
@@ -83,9 +83,9 @@
   <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
   <!-- <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'> -->
   <link rel="stylesheet" href="../../css/style.css">
-  <link rel="stylesheet" href="../../css/select.css">
+  <!-- <link rel="stylesheet" href="../../css/select.css"> -->
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="../../css/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="../../css/bootstrap/bootstrap.css">
 </head>
 
 <body ng-controller="siniController" onLoad="noBack();" onpageshow="if (event.persisted) noBack();" onUnload="">
@@ -93,7 +93,7 @@
 <!--nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
     <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-    Bootstrap
+      Bootstrap
   </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
